fix(security): extract hardcoded CORS origins to env var CORS_ALLOWED_ORIGINS
- developer-workstation SecurityConfig: replace hardcoded localhost list with @Value
- admin-center WebMvcConfig: replace hardcoded localhost origins with @Value
- workflow-engine CorsConfig: replace wildcard origin with configurable @Value
- api-gateway application.yml: use CORS_ALLOWED_ORIGINS env var
- Add cors.allowed-origins config to application.yml for all 3 services
- Add CORS_ALLOWED_ORIGINS to all docker-compose files (dev/sit/uat/prod)
- Add CORS_ALLOWED_ORIGINS to all environment .env files

Resolves TODO #2